<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mysports.fragments.RegistrationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ddffffff">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <com.mysports.utilities.CustomTextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/color_textview_black">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_custom_border_grey"
                            android:hint="@string/hint_registration_name"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/color_textview_black"
                            android:textSize="15sp" />

                    </com.mysports.utilities.CustomTextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <!-- android:button="@drawable/custom_radio"-->
                            <RadioButton
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:text="Male" />
                            <!--android:button="@drawable/custom_radio"-->
                            <RadioButton
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:paddingLeft="10dp"
                                android:text="Female" />
                        </RadioGroup>
                    </LinearLayout>

                    <com.mysports.utilities.CustomTextInputLayout
                        android:id="@+id/input_layout_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/color_textview_black">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_custom_border_grey"
                            android:hint="@string/hint_mobile"
                            android:inputType="number"
                            android:textColorHint="@color/color_textview_black"
                            android:textSize="15sp" />

                    </com.mysports.utilities.CustomTextInputLayout>


                    <!-- <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">

                         <EditText
                             android:id="@+id/input_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_phone"
                             android:inputType="textPassword" />
                     </android.support.design.widget.TextInputLayout>-->

                    <com.mysports.utilities.CustomTextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/color_textview_black">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_custom_border_grey"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/color_textview_black"
                            android:textSize="15sp" />

                    </com.mysports.utilities.CustomTextInputLayout>


                    <com.mysports.utilities.CustomTextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/color_textview_black">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_custom_border_grey"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textColorHint="@color/color_textview_black"
                            android:textSize="15sp" />

                    </com.mysports.utilities.CustomTextInputLayout>


                    <com.mysports.utilities.CustomTextInputLayout
                        android:id="@+id/input_layout_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/color_textview_black">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_custom_border_grey"
                            android:hint="@string/hint_confirm_password"
                            android:inputType="textPassword"
                            android:textColorHint="@color/color_textview_black"
                            android:textSize="15sp" />

                    </com.mysports.utilities.CustomTextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.v7.widget.AppCompatSpinner
                                android:layout_marginTop="10dp"
                                android:id="@+id/spinner_sports_interest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:overlapAnchor="false"
                                android:spinnerMode="dropdown" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@color/color_custom_border_grey" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/category_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:shadowColor="@color/colorPrimary"
                            android:theme="@style/MyCheckBox" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="I Agree" />
                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/register_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/red_button"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/btn_submit"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
